--- a/ansible/roles/rpi_setup/templates/dhcpcd.conf.j2
+++ b/ansible/roles/rpi_setup/templates/dhcpcd.conf.j2
@@ -7,6 +7,8 @@ option classless_static_routes
 option interface_mtu
 require dhcp_server_identifier
 slaac private
+
 interface eth0
+nolink
 static ip_address=192.0.2.99/24
 static domain_name_servers=8.8.8.8
